# ai-companion

./: .gitignore  .graphifyignore  AGENTS.md  COMPONENTS.md  DESIGN.md  README.md  TOKENS.md  docker-compose.yml
backend/: .env.example  config.py  main.py  pyproject.toml
backend/api/: websocket.py
backend/api/routes/: agent.py  health.py  memory.py  proactive.py  tools.py
backend/core/: agent.py  context_planner.py  embeddings.py  llm.py  modes.py  voice.py
backend/data/: companion.db
backend/db/: postgres.py  schema.sql
backend/evals/: __init__.py  retrieval.py
backend/memory/: service.py
backend/models/: agent.py  memory.py  proactive.py
backend/proactive/: service.py
backend/sensory/: service.py
backend/tasks/: jobs.py  runner.py
backend/tools/: __init__.py  internet.py
frontend/: .env.example  app.json  package-lock.json  package.json
frontend/app/: index.tsx
frontend/components/: AtlasToggle.tsx  ConversationSheet.tsx  MemoryInspector.tsx  MemoryInspector.web.tsx  ModeToggle.tsx  Notification.tsx  Orb.tsx  Orb.web.tsx  PressButton.tsx  VoiceActionButton.tsx
frontend/dist-web/: index.html
frontend/dist-web/_expo/static/js/web/: entry-32347f8cadc99acb03bcb102a4e0c143.js
frontend/hooks/: useAgent.ts  useConversationFeed.ts  useMemoryAtlas.ts  useProactiveInsight.ts
frontend/services/: api.ts
frontend/stores/: agentStore.ts
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/embed/: index.ts
