[project]
name = "personal-ai-companion-backend"
version = "0.1.0"
description = "FastAPI backend for a personal AI companion"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.54.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "psycopg[binary]>=3.2.3",
  "psycopg-pool>=3.2.4",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "api",
  "api.routes",
  "core",
  "db",
  "intelligence",
  "memory",
  "models",
  "proactive",
  "sensory",
  "tasks",
]
